envoy-operation-level-support/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: http_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 9080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/hello"
                            headers:
                              name: ":method"
                              exact_match: "POST"
                          route:
                            cluster: httpbin-cluster
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/hello/([^/]+)"
                              substitution: "/anything/hello-world/post/"
                        - match:
                            prefix: "/hello"
                            headers:
                              name: ":method"
                              exact_match: "PUT"
                          route:
                            cluster: httpbin-cluster
                            regex_rewrite:
                              pattern:
                                google_re2: {}
                                regex: "^/hello/([^/]+)"
                              substitution: "/anything/hello-put/put/"
                        - match:
                            prefix: "/hello"
                            headers:
                              name: ":method"
                              exact_match: "GET"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hello World - GET DIRECT"
                        - match: { prefix: "/" }
                          direct_response:
                            status: 200
                            body:
                              inline_string: "Hello World"
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: httpbin-cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin.org
                      port_value: 80
